Re-arrange terrain rules

--- a/content/intro.html
+++ b/content/intro.html
@@ -1,25 +1,26 @@
 <h2>Epic Armageddon: Ragnarök</h2>
 
 <p class="lead">
-    Welcome to the Fan Based website for EA:Ragnarök. On these pages you will find fan based lists and scenarios
+    Welcome to Epic Armageddon: Ragnarök. On these pages you will find fan based lists and scenarios for Epic Armageddon
     developed by the EA:Ragnarök team. A lot of list foundations and ideas are credit to the NetEA group, Epic-UK group
     and the F-ERC group. We have done these list because we really enjoy the game and list development. We hope we have
     created a fresh new vibe on the game and we aim for some fun gaming sessions.
 </p>
 
 <p>
-    These list are still in development and some may not be ready for a balanced game. We have marked lists where we
-    feel they are at within the development for ease of creating a fun game. We also invite you to comment/bring ideas
-    to the table through our Discord channel (link on the 'Online Gaming' page) we have set up. With epic being out of
-    production for many years now, our gaming friends are far and wide for us. We play alot of games online and invite
-    you to also join in on games through the discord channel. We will be setting up a online gaming page with tutorials
-    and links to play games via Table Top Simulator. This software is available on steam for a few dollars. Special
-    thanks to 'Norto' for a ton of the initial work on this project.
+    These list are still in development but we feel we have reached a point where they are ready for a public beta.
+    We invite you to comment/bring ideas to the table through our Discord channel (link on the 'Online Gaming' page) we
+    have set up. With epic being out of production for many years now, our gaming friends are far and wide for us. We
+    play a lot of games online and invite you to also join in online games through the discord channel. On the 'Online
+    Gaming' page you will find tutorials and links to play games via Tabletop Simulator. This software is available on
+    steam for a few dollars. Special thanks to 'Norto' for a ton of the initial work on this project.
 </p>
 
-<h3>Design...</h3>
-<p> We have done a few general changes across all Epic Armageddon: Ragnarök lists that we hope will
-    improve the game, and overall list design.</p>
+<h3>List Design</h3>
+<p>
+    We have done a few general changes across all Epic Armageddon: Ragnarök lists that we hope will
+    improve the game, and overall list design.
+</p>
 
 <h4>Titans</h4>
 <p>
@@ -39,7 +40,7 @@
     </li>
     <li>
         We have introduced a general weakness to being swarmed by enemy infantry. To do this we have reduced the close
-        combat value of many titans and also changed the stats on the Titan close combat weapons. Titan close combat
+        combat value of many titans and also changed the stats on most Titan close combat weapons. Titan close combat
         weapons now generally give one extra TK attack doing multiple damage instead of giving multiple extra TK or
         Macro attacks. This reduces their efficiency against infantry while still being useful against other War
         Engines.
@@ -47,7 +48,8 @@
     <li>
         We have removed Thick Rear Armour from many Titans to force you to play them with a bit more care.
     </li>
-    <li>We have introduces the "God Machine" and "Split Fire" special rules for large (8+ DC) titans. God machine gives
+    <li>
+        We have introduces the "God Machine" and "Split Fire" special rules for large (8+ DC) titans. God machine gives
         blast markers to your opponents army if you kill his Titan, and Split Fire allows you to target more than one
         formation under some circumstances.
     </li>
@@ -64,13 +66,7 @@
     line of sight for each other, both for shooting and fire-fights, and assaults were very challenging if played by the
     book. Each Knight can only allocate close combat hits to enemies in base-to-base and fire-fight hits to enemies not
     in base-to-base. To do this correct you would have to roll for each Knight individually, which is a tedious process.
-    In an attempt to fix this we have introduced a new type of unit: Heavy Vehicle. This is used for Knights and similar
-    units like e.g. Stompas. Details on the Heavy Vehicle rules can be found in the army lists, but on a high level they
-    behave like an Armoured Vehicle with 2 DC.
-</p>
-
-<h4>Formation upgrades</h4>
-<p>
-    Many formation upgrades have received a price reduction to compensate for the loss of activations. We felt that many
-    upgrades were too pricy and were rarely taken given the importance of activations in Epic.
+    In an attempt to fix this we have introduced a new type of unit: Heavy Armoured Vehicle (H-AV). This is used for
+    Knights and similar units like e.g. Stompas. Details on the Heavy Armoured Vehicle rules can be found in the army
+    lists, but on a high level they behave like an Armoured Vehicle with 2 DC.
 </p>
