--- a/content/rules.html
+++ b/content/rules.html
@@ -7,7 +7,7 @@
     lists. We suggest you also use these when playing EA:Ragnarök lists and scenarios.
 </p>
 
-<!--<h3>Ragnarök rule interpretations & house-rules</h3>-->
+<h3>EA:Ragnarök rule interpretations & house-rules</h3>
 <h6>Say it and its true</h6>
 <p>
     Effectively lots of things may move on a table. If a player is able to put a unit 6cm away from another unit, or
@@ -111,6 +111,14 @@
     within a blocked portal may not enter play and must use the hold action to remove blast markers.
 </p>
 
+<h6>Moving out of Wraithgates and other portals</h6>
+<p>
+    Rules for how to enter play from a webway or other portal can be played in different ways. We suggest you start
+    measuring the move from within the portal, i.e. the first 4cm of movement is used to get on to the board given a
+    standard 4x1 infantry base. This means a formation with 15cm move advancing out of a portal would have to end their
+    move with all parts of all units within 15cm of the portal.
+</p>
+
 <h6>Terrain height, skimmers & hills</h6>
 <p>
     Terrain and War Engines are "infinitely high" to ground units with regards to line of sight. No ground unit can see
@@ -120,3 +128,4 @@
 </p>
 
 <h6>TODO: WE transport transporting units, separate formations, may intermingle?</h6>
+<h6>TODO: Air Assault ZoC?</h6>
