--- a/content/terrain.html
+++ b/content/terrain.html
@@ -1,29 +1,102 @@
 <h2>Terrain</h2>
 
-<p class="lead">Terrain in Epic Armageddon Ragnarök</p>
-<p> In Epic Armageddon, certain types of terrain have become much more common than others, simply because some types typically contribute to balanced games, while others tend to favor certain types of armies over others. For this reason a revised Terrain Effects table can be found below (player-placed terrain such as Bunkers, Trenches etc. are covered by the Fortified Positions special rule).</p>
-<p class="lead">Terrain Effects</p>
+<p class="lead">
+    In Epic Armageddon, certain types of terrain have become much more common than others, simply because some terrain
+    types tend to favor certain types of armies over others. For this reason we have created a revised Terrain Effects
+    table where we also introduced a few new terrain effects. We hope this will contribute to more varied game tables
+    while keeping the balance of the armies intact.
+</p>
 
-<p><i>Line of Sight</i>: All terrain that blocks line of sight counts as being taller than all units unless otherwise specified. Units that are popped up are able to see beyond such terrain, but can only see targets that are further away from the intervening terrain than they are.</p>
+<h4>True line of sight vs. infinite height</h4>
 
-<p><i>God Machines</i>: Units with the God Machine special rule are so tall that they are considered to be always 'popped up' for Line of Sight purposes. As with other popped up units, they may never claim Hull Down from intervening terrain, even while inside terrain. God Machines counts as being taller than all terrain pieces, and will block line of sight even to units that are popped up, including God Machines on hills. </p>
+<p>
+    Epic Armageddon rules as written assumes you play with "true line of sight", meaning if the Warlord model is taller
+    than the wood, you can see it from the other side. The leads to various odd scenarios (such as people modelling
+    their Warhounds kneeling, to be able to hide behind low terrain) and discussions. We strongly recommend you play
+    all terrain as "infinitely high". This also includes War Engines, as they also block Line of Sight.
+</p>
+<p>
+    No ground unit can see directly through a piece of terrain – unless they are in it. Popped up skimmers can see over
+    terrain, but can only see units that are further away from the edge of the terrain piece than they are. Same rule
+    as for popped up skimmers also apply for units on hills. Aircrafts can always see over all terrain.
+</p>
 
-<p><i>Hills</i>: Hills are a special terrain type that both blocks line of sight, but is also possbile to mount. This means that units that are even partially on a Hill counts as being popped up for Line of Sight purposes.</p>
+<p>
+    <i>God Machines</i>: Units with the <i>God Machine</i> special rule are so tall that they are considered to be
+    always 'popped up' for Line of Sight purposes. As with other popped up units, they may never claim cover to hit
+    modifiers from intervening terrain, even while inside terrain. God Machines counts as being taller than all terrain
+    pieces, and will block line of sight even to units that are popped up or on a hill (including other God Machines on
+    hills).
+</p>
 
-<p><i>Hull Down</i>: All terrain that blocks Line of Sight can give Hull Down to units that are inside such terrain, or even partially obscured behind it to all units in the firing formation.</p>
+<h4>Terrain Effects</h4>
+<p>
+    We have revised a few of the terrain effects from the NetEA rules. Terrain effects not mentioned here are identical
+    to the NetEA rules.
+</p>
 
-<p><i>Dangerous Terrain</i>: Roll a D6 when you enter dangerous terrain, or when you start to move if already in dangerous terrain. On a roll of 1, the unit is destroyed with no save allowed, but the formation it is part of does not receive a Blast marker. Units may choose to move through dangerous terrain cautiously. A unit that is moving cautiously counts as having a speed of 5cm, but is allowed to re-roll any Dangerous Terrain tests that it fails. </p>
+<p>
+    <b>Difficult terrain</b>:
+    In addition to the standard Dangerous terrain we have introduced Difficult terrain.
 
-<p><i>Difficult Terrain</i>: As Dangerous Terrain, but units take damage on a 7+ instead of a 6+. Units that has the 'Walker' special rule, or that moves cautiously, completely ignores Difficult Terrain.</p>
+    Roll a D6 when you enter difficult terrain, or when you start to move if already in difficult terrain. On a roll of
+    1 you roll a second die. On a roll of 1-3 on the second die, the unit is destroyed with no save allowed, but the
+    formation it is part of does not receive a Blast marker.
 
-<p><i>Roads</i>: Units that spend a whole move on a road may add 5cms to their move (does not apply to non-standard movement such as counter charges or consolidation movement). In addition, if all of the units in a formation are on a road at the start of their action, you may declare they will make a road action. The formation may attempt to do an Advance, Double or March action, gaining an additional +1 to the activation roll. However, all of the units in the formation must remain on the road during the entire action.</p>
+    Units may choose to move through difficult terrain cautiously. A unit that is moving cautiously counts as having a
+    speed of 5cm, but does not have to roll any Difficult Terrain test. Units with the <i>Walker</i> special rule can
+    also move threw Difficult terrain without having to roll Difficult terrain tests.
+</p>
 
-<p><i>Objectives and Impassable Terrain</i>: Objectives may not be placed inside of terrain that is Impassible for any unit type.</p>
+<p>
+    <b>Open Ground</b>:
+    In the NetEa rules it is mentioned as a terrain effect on open ground that Infantry count as being in cover (-1 to
+    hit modifier) and receive a 5+ cover save if they are on <i>Overwatch</i> in Open Ground. We suggest you extend
+    this rule to all terrain types. I.e. an Infantry unit on <i>Overwatch</i> in Scrubs (6+ cover save) would still
+    get 5+ cover save from being on <i>Overwatch</i>.
+</p>
 
-<p><i>Skimmers, Support Craft and Impassable Terrain</i>: Skimmers and Support Craft can move over Impassable Terrain, but cannot stop there, not even if the terrain type does not block Line of Sight.</p>
+<p>
+    <b>Hills</b>: As previously mentioned, units on a hill counts as popped up skimmers for the purpose of Line of
+    Sight. See the top section of this page. Hills may optionally have one or more steep hillsides, which is
+    impassable to all unit types (make sure to cover this during the five minute warm up).
+</p>
 
-<p><i>Cover from AV, H-AV and WE</i>: INF units counts as being in cover and receive the -1 to hit modifier (but no cover save) if they are touching a friendly Armoured Vehicle or War Engine, to represent their ability to take cover from enemy fire by crouching behind the vehicle. There can be no more than two units for each Armoured Vehicle, four for each H-AV, or two for each DC that a War Engine has.</p>
+<p>
+    <b>Roads</b>: Units that spend a whole move on a road may add 5cms to their move (does not apply to non-standard
+    movement such as counter charges or consolidation movement). In addition, if all of the units in a formation are on
+    a road at the start of their action, you may declare they will make a road move. The formation may attempt to do
+    an Advance, Double or March action, gaining an additional +1 to the activation roll. However, all of the units in
+    the formation must remain on the road during the entire action.
+</p>
 
+<p>
+    <b>Armoured Vehicles</b>:
+    Infantry units counts as being in cover and receive the -1 to hit modifier (but no cover save) if they are touching
+    <b>a friendly</b> Armoured Vehicle or War Engine, to represent their ability to take cover from enemy fire by
+    crouching behind the vehicle. There can be no more than two units for each Armoured Vehicle, four for each H-AV, or
+    two for each DC that a War Engine has.
+</p>
+
+<!--
+<p><i>Hull Down</i>: All terrain that blocks Line of Sight can give Hull Down to units that are inside such terrain, or
+    even partially obscured behind it to all units in the firing formation.</p>
+
+<p><i>Dangerous Terrain</i>: Roll a D6 when you enter dangerous terrain, or when you start to move if already in
+    dangerous terrain. On a roll of 1, the unit is destroyed with no save allowed, but the formation it is part of does
+    not receive a Blast marker. Units may choose to move through dangerous terrain cautiously. A unit that is moving
+    cautiously counts as having a speed of 5cm, but is allowed to re-roll any Dangerous Terrain tests that it fails.
+</p>
+
+<p><i>Difficult Terrain</i>: As Dangerous Terrain, but units take damage on a 7+ instead of a 6+. Units that has the
+    'Walker' special rule, or that moves cautiously, completely ignores Difficult Terrain.</p>
+
+<p><i>Objectives and Impassable Terrain</i>: Objectives may not be placed inside of terrain that is Impassible for any
+    unit type.</p>
+
+<p><i>Skimmers, Support Craft and Impassable Terrain</i>: Skimmers and Support Craft can move over Impassable Terrain,
+    but cannot stop there, not even if the terrain type does not block Line of Sight.</p>
+-->
 <table class="table table-striped">
     <thead>
     <tr>
@@ -36,6 +109,13 @@
     </thead>
     <tbody>
     <tr>
+        <th scope="row">Large Building</th>
+        <td>4+ Cover Save</td>
+        <td>Impassable</td>
+        <td>Impassable</td>
+        <td>Yes</td>
+    </tr>
+    <tr>
         <th scope="row">Urban Area</th>
         <td>5+ Cover Save</td>
         <td>Difficult</td>
@@ -43,7 +123,7 @@
         <td>Yes</td>
     </tr>
     <tr>
-        <th scope="row">Ruined Area</th>
+        <th scope="row">Ruins, Rubble</th>
         <td>4+ Cover Save</td>
         <td>Dangerous</td>
         <td>Dangerous</td>
@@ -57,39 +137,46 @@
         <td>No</td>
     </tr>
     <tr>
-        <th scope="row">Wooded Area</th>
-        <td>5+ Cover Save</td>
-        <td>Dangerous</td>
-        <td>Dangerous</td>
-        <td>Yes</td>
-    </tr>
-    <tr>
-        <th scope="row">Marsh Area</th>
-        <td>5+ Cover Save</td>
-        <td>Dangerous</td>
-        <td>Dangerous</td>
-        <td>No</td>
-    </tr>
-    <tr>
-        <th scope="row">Scrub Area</th>
-        <td>6+ Cover Save</td>
-        <td>Difficult</td>
-        <td>Difficult</td>
-        <td>Yes</td>
-    </tr>
-    <tr>
-        <th scope="row">Field Area</th>
-        <td>6+ Cover Save</td>
-        <td>No Effect</td>
-        <td>No Effect</td>
-        <td>No</td>
-    </tr>
-    <tr>
-        <th scope="row">Jungle Area</th>
+        <th scope="row">Jungle</th>
         <td>4+ Cover Save, Difficult</td>
         <td>Dangerous</td>
         <td>Dangerous</td>
         <td>Yes</td>
+    </tr>
+    <tr>
+        <th scope="row">Woods</th>
+        <td>5+ Cover Save</td>
+        <td>Dangerous</td>
+        <td>Dangerous</td>
+        <td>Yes</td>
+    </tr>
+    <tr>
+        <th scope="row">Marsh</th>
+        <td>5+ Cover Save</td>
+        <td>Dangerous</td>
+        <td>Dangerous</td>
+        <td>No</td>
+    </tr>
+    <tr>
+        <th scope="row">Scrub</th>
+        <td>6+ Cover Save</td>
+        <td>Difficult</td>
+        <td>Difficult</td>
+        <td>Yes</td>
+    </tr>
+    <tr>
+        <th scope="row">Field</th>
+        <td>6+ Cover Save</td>
+        <td>No Effect</td>
+        <td>No Effect</td>
+        <td>No</td>
+    </tr>
+    <tr>
+        <th scope="row">Stream, Shallow River</th>
+        <td>6+ Cover Save, Difficult</td>
+        <td>Difficult</td>
+        <td>No Effect</td>
+        <td>No</td>
     </tr>
     <tr>
         <th scope="row">Open Ground</th>
@@ -106,32 +193,10 @@
         <td>No</td>
     </tr>
     <tr>
-        <th scope="row">Flat Hillside (See special rules)</th>
+        <th scope="row">Hill (See special rules)</th>
         <td>No Effect</td>
         <td>No Effect</td>
         <td>No Effect</td>
-        <td>Yes</td>
-    </tr>
-    <tr>
-        <th scope="row">Steep Hillside (see special rules)</th>
-        <td>Impassable</td>
-        <td>Impassable</td>
-        <td>Impassable</td>
-        <td>Yes</td>
-        </tr>
-    </tr>
-    <tr>
-        <th scope="row">Stream / Shallow River</th>
-        <td>6+ Cover Save, Difficult</td>
-        <td>Difficult</td>
-        <td>No Effect</td>
-        <td>No</td>
-    </tr>
-    <tr>
-        <th scope="row">Large Building</th>
-        <td>4+ Cover Save</td>
-        <td>Impassable</td>
-        <td>Impassable</td>
         <td>Yes</td>
     </tr>
     <tr>
