--- a/lists/SM/codexastartes.log.html
+++ b/lists/SM/codexastartes.log.html
@@ -6,7 +6,7 @@
     other Space Marine lists more rigid. It is also one of the few lists that has access to the very powerful Landing
     Craft. A Space Marine fighter, the Storm Talon, has been introduced for all Space Marine lists, but as a unique
     feature of the Codex Astartes the Imperial Aircrafts has been kept in the list. The option to include a Warlord
-    titan has been removed from all Space Marine lists
+    titan has been removed from all Space Marine lists.
 </p>
 <p>
     A major change to all Space Marine lists, in order to see more characters in the lists, is that the 'They Shall
