--- a/content/scenarios/battleline.html
+++ b/content/scenarios/battleline.html
@@ -10,7 +10,8 @@
 <h4>Place Objective Markers</h4>
 <p>Same as the NetEA Epic Tournament Game Rules, but there are some additional restrictions on objective placement.
     In addition to standard objective placement rules the Blitz objective must be placed at least 15cm away from any
-    corner, and the remaining two objectives must be set up at least 15cm away from any board edge.</p>
+    corner, and the remaining two objectives must be set up at least 15cm away from any board edge. Also, you may not
+    place objective markers in terrain that is impassable for any unit type</p>
 
 <h4>Victory Conditions</h4>
 <p>Same as the NetEA Epic Tournament Game Rules, with the following changes:</p>
