--- a/lists/Chaos/deathguard.log.html
+++ b/lists/Chaos/deathguard.log.html
@@ -1,34 +1,12 @@
 <h4>Version 1.0.beta</h4>
 <p>
-    The EA:Ragnarök Death Guard has taken some inspiration from  list is based on the NetEA version. Black Legion is one of the most powerful armies in Epic Armageddon, and it still is, but the changes will hopefully open it up to more playstyles. Below are the more significant changes.
+    The EA:Ragnarök Death Guard has taken some inspiration from the E-UK version of the list, as well as the Emperor's Children Net-EA list. Instead of the Invulnerable Save and lack of access to the 'March' action, the list trades increased save for worse speed on some of its units, making the list slower overall. Most changes and concepts have been inherited from the Black Legion and the Emperor's Children lists, in particular the mixed formations of Plague Marines and Chaos Space Marines.
 </p>
-<p>
-    Factions and Daemons: The balance between the lesser daemons in the Black Legion list has been quite skewed, with Flamers and Daemonic Beasts in particular being very powerful choices. There's also been the issue of consistency, where Tzeentch doesn't have access to Horrors. So a decision was made to slightly nerf the daemons by reducing the armour save of Daemonic Beasts to 5+, and reducing their engagement range by removing Infiltrators and giving them a move of 30cm instead. Horrors replace Flamers in the list. To compensate for these changes, the army has become true undivided, the factions rule is gone, and all lesser daemons cost 1 summoning point.
-
-    Greater Daemons are essentially unchanged, but has received an Invulnerable Save (along with all units in the game that can be considered daemonic) and are no longer Expendable. The Bloodthirster now also has an FF value.
-</p>
-<p>
-    Daemon Engines: In order to give these types of units a more defined personality and give more variety between factions, all daemon engines now have 2+ Initiative Rating and Invulnerable Save. This has made it possible to make certain formations such as the Defilers slightly cheaper. They are also by definition part of a faction, and as such have a faction special rule.
-</p>
-<p>
-    Anti-Air: Black Legion previously only had Obliterators as their sole ground AA unit, which by its nature caused certain formations to very common. To open up the playstyle a bit the Chaos Stalker has been added to most CSM armies, while Obliterators can be taken as part of the Chaos Terminators formation.
-</p>
-
 <h5>Additional nerfs, boosts & tweaks</h5>
 <ul>
-    <li>Daemonic Icon grants Augment Summoning +1 in addition to its other stats.</li>
-    <li>Daemon Prince always has Supreme Commander and Wings, while gaining Daemonic Focus and Invulnerable Save.</li>
-    <li>The Chaos Champion has slightly different stats, removing the difference between factions.</li>
-    <li>Land Raiders are cheaper to take as a formation transport upgrade, in line with Transport upgrades throughout the game.</li>
-    <li>The Havocs and Cult Marines upgrades do no longer add to formation size by replacing CSM units. This makes the upgrades more attractive by making them significantly cheaper.</li>
-    <li>The Armoured Company has been moved to the Support Section.</li>
-    <li>Chosen are now forced to take Rhinos, but can replace these with Chaos Dreadnoughts. </li>
-    <li>Hell Blades have a 6+ AA instead of 5+, but are 25 points cheaper.</li>
-    <li>The Harbringer has been removed from the list.</li>
-    <li>The Doom Wheel has been a very powerful choice and is 25 points more expensive.</li>
-    <li>The Chaos Warhounds have been reduced to 25cm speed, in line with other Warhound type units in the game.</li>
-    <li>The Chaos Reaver and Warlord replaces the Khorne-type Titans that Black Legion had, but have essentially the same weapons. They inherit the type of changes that has been made to titans elsewhere in the game.</li>
-    <li>The Despoiler Class Battleship has had its Slow and Steady rule replaced with 'Slow to Arrive' (can be plotted from turn 2
-        onwards instead of turn 3 onwards) and is also significantly cheaper.</li>
-
+    <li>Daemonic Beasts removed, replaced with Beasts of Nurgle and Plague Drones.</li>
+    <li>Death Guard Terminators formation slightly cheaper due to the list's lack of Dreadclaws.</li>
+    <li>Plague Zombies are fixed size, but slightly worse stats.</li>
+    <li>Plague Tower oriented more towards being a transport option, with higher speed and worse save.</li>
+    <li>Nurgle Titans trades Void Shields for more DC, retains the same speed as others of their type.</li>
 </ul>
