--- a/content/terrain.html
+++ b/content/terrain.html
@@ -78,9 +78,8 @@
     two for each DC that a War Engine has.
 </p>
 
-
 <p><b>Hull Down</b>: All terrain that blocks Line of Sight can give Hull Down to units that are inside such terrain, or
-    even partially obscured behind it to all units in the firing formation.</p>
+    that is even partially obscured behind it, to all units in the firing formation.</p>
 <!--
 <p><i>Dangerous Terrain</i>: Roll a D6 when you enter dangerous terrain, or when you start to move if already in
     dangerous terrain. On a roll of 1, the unit is destroyed with no save allowed, but the formation it is part of does
