--- a/content/armies.html
+++ b/content/armies.html
@@ -2,8 +2,7 @@
 
 <p class="lead">
     Most EA:Ragnarök list are based on lists developed by the NetEA group, Epic-UK group and the F-ERC group. We have
-    done a few general changes across all EA:Ragnarök lists as well as tweaks, nerfs and boost to hopefully make them
-    more fun to play and less frustrating to play against. Each list contains a description of the list origin and
+    done a few general changes across all EA:Ragnarök lists as well as various tweaks, nerfs and boosts. Each list contains a description of the list origin and
     the changes we made from the original.
 </p>
 <!--
