--- a/content/scenarios/battleline.html
+++ b/content/scenarios/battleline.html
@@ -11,7 +11,7 @@
 <p>Same as the NetEA Epic Tournament Game Rules, but there are some additional restrictions on objective placement.
     In addition to standard objective placement rules the Blitz objective must be placed at least 15cm away from any
     corner, and the remaining two objectives must be set up at least 15cm away from any board edge. Also, you may not
-    place objective markers in terrain that is impassable for any unit type</p>
+    place objective markers in terrain that is impassable for any unit type.</p>
 
 <h4>Victory Conditions</h4>
 <p>Same as the NetEA Epic Tournament Game Rules, with the following changes:</p>
@@ -23,7 +23,7 @@
     victory conditions and calculate the scenario score as if the game had ended in turn 3.</p>
 
 <p>You must check to see if either player has won at the end of the third and fourth game turns. If neither player has
-    won at the end of the fourth turn then consult the table below to calculate scenario scores, to 'tiebreak' or
+    won at the end of the fourth turn then consult the table below to calculate scenario scores. No 'tiebreak' or
     'victory points' are used in this scenario.</p>
 
 <table class="table table-striped">
