--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -14,7 +14,7 @@
 <p>These objectives are placed in the same manner as in the Epic Tournament Scenario with some additional restrictions.
     In addition to standard objective placement rules the Blitz objective must be placed at least 15cm away from any
     corner, and the remaining two objectives must be set up at least 15cm away from any board edge. Also, you may not
-    place objective markers in terrain that is impassable for any unit type</p>
+    place objective markers in terrain that is impassable for any unit type.</p>
 
 <p>Unlike in the normal Epic Tournament Scenario, objectives do have memory. Each objective starts the game in
     possession of the player who's half it is.</p>
