Iron Hands log file

--- a/lists/SM/sm.log.html
+++ b/lists/SM/sm.log.html
@@ -39,5 +39,6 @@
     <li>The Battle Barge has had its Slow and Steady rule replaced with 'Slow to Arrive' (can be plotted from turn 2
         onwards instead of turn 3 onwards) and is also significantly cheaper.
     </li>
+    <li>Drop Pods has been nerfed to only hit on 6+ with their Deathwind.</li>
     <li>The option to include a Warlord titan has been removed from all Space Marine lists.</li>
 </ul>
