--- a/content/list.html
+++ b/content/list.html
@@ -25,7 +25,7 @@
                             console.log("No list log provided");
                         });
 
-                        $.get("lists/" + race + "/" + race + ".log.html", function (data) {
+                        $.get("lists/" + race + "/" + race + "_race.log.html", function (data) {
                             content.append(data);
                         }).fail(function (jqxhr, textStatus, error) {
                             console.log("No race log provided");
