--- a/content/terrain.html
+++ b/content/terrain.html
@@ -40,17 +40,17 @@
     In addition to the standard Dangerous terrain we have introduced Difficult terrain.
 
     Roll a D6 when you enter difficult terrain, or when you start to move if already in difficult terrain. On a roll of
-    1 you roll a second die. On a roll of 1-3 on the second die, the unit is destroyed with no save allowed, but the
+    1 you roll a second die. On a roll of 1-3 on the second die, the unit takes a hit with no save allowed, but the
     formation it is part of does not receive a Blast marker.
 
-    Units may choose to move through difficult terrain cautiously. A unit that is moving cautiously counts as having a
-    speed of 5cm, but does not have to roll any Difficult Terrain test. Units with the <i>Walker</i> special rule can
-    also move threw Difficult terrain without having to roll Difficult terrain tests.
+    Units may choose to move through difficult terrain cautiously. Such a unit counts as having a
+    speed of 5cm, but does not have to roll any Difficult Terrain test. Units with the <i>Walker</i> special rule may
+    move through Difficult terrain without rolling Difficult terrain tests.
 </p>
 
 <p>
     <b>Open Ground</b>:
-    In the NetEa rules it is mentioned as a terrain effect on open ground that Infantry count as being in cover (-1 to
+    In the Core rules it is mentioned as a terrain effect on open ground that Infantry count as being in cover (-1 to
     hit modifier) and receive a 5+ cover save if they are on <i>Overwatch</i> in Open Ground. We suggest you extend
     this rule to all terrain types. I.e. an Infantry unit on <i>Overwatch</i> in Scrubs (6+ cover save) would still
     get 5+ cover save from being on <i>Overwatch</i>.
@@ -58,7 +58,7 @@
 
 <p>
     <b>Hills</b>: As previously mentioned, units on a hill counts as popped up skimmers for the purpose of Line of
-    Sight. See the top section of this page. Hills may optionally have one or more steep hillsides, which is
+    Sight (see the top section of this page). Hills may optionally have one or more steep hillsides, which are
     impassable to all unit types (make sure to cover this during the five minute warm up).
 </p>
 
@@ -73,7 +73,7 @@
 <p>
     <b>Armoured Vehicles</b>:
     Infantry units counts as being in cover and receive the -1 to hit modifier (but no cover save) if they are touching
-    <b>a friendly</b> Armoured Vehicle or War Engine, to represent their ability to take cover from enemy fire by
+    a <b>friendly</b> Armoured Vehicle or War Engine, to represent their ability to take cover from enemy fire by
     crouching behind the vehicle. There can be no more than two units for each Armoured Vehicle, four for each H-AV, or
     two for each DC that a War Engine has.
 </p>
