--- a/content/scenarios/battleline.html
+++ b/content/scenarios/battleline.html
@@ -19,7 +19,7 @@
     objectives, but this also includes "They Shall Not Pass" victory condition. In addition, Aircraft which have landed
     may neither capture nor contest objectives or deny "They Shall Not Pass" on the same turn that it lands.</p>
 
-<p>If at the end of any turn a player has a 4 or 5 victory condition lead over his opponent then the game ends. Compare
+<p>If at the end of turn 1 or 2 a player has a 4 or 5 victory condition lead over his opponent then the game ends. Compare
     victory conditions and calculate the scenario score as if the game had ended in turn 3.</p>
 
 <p>You must check to see if either player has won at the end of the third and fourth game turns. If neither player has
