--- a/content/rules.html
+++ b/content/rules.html
@@ -20,7 +20,7 @@
     An issue that is explicitly unresolved in the core rules is the issue of units with the 'Scout' special rule blocking formations from engaging in unfair ways.
     While 'just don't do it' resolves some situations, it does lead to a grey zone of play which is very problematic and leads to unnecessary arguments.
     To resolve this issue we suggest that units with 'Scout' only counts as having 5cm in 'Zone of Control' for entire duration
-    of when another formation conducts an Engage action. The only restriction is that such a formation may only move past, but not between, units with 'Scout'.
+    of when enemy formations conducts an Engage action. The only restriction is that Engaging formations may only move past, but not between, units with 'Scout'.
 </p>
 
 <h6>Preserve allocation order between normal and macro hits</h6>
