--- a/content/rules.html
+++ b/content/rules.html
@@ -23,6 +23,11 @@
     of when enemy formations conducts an Engage action. The only restriction is that Engaging formations may only move past, but not between, units with 'Scout'.
 </p>
 
+<h6>Clipping engages and counter charge</h6>
+<p>
+    Setting up engages properly is a skill that wins and loses games in Epic Armageddon. Unfortunately, this also means that the set-up time for engages tends to take a lot of time and result in quite a lot of arguments both over the inital engage and the subsequent counter charge movement. This is particularly true for the 'clipping engage', where a sliver of the targeted formation is participating against the vast majority of the engaging formation, while the rest are unable to counter charge due to there being another enemy formation that is closer. Our suggested solution to this is that units in defending formations may elect to remain stationary to gain 20cm range on their Fire Fight, but may not counter charge at all if the closest enemy formation is a supporting formation. The exeption would be if they can get in contact straight away due to having 30cm or more in speed, and a unit from a supporting formation is less than 10cm away).
+</p>
+
 <h6>Preserve allocation order between normal and macro hits</h6>
 <p>
     Macro and standard hits are resolved in separate phases of shooting and assaults. We suggest you preserve the
