Nec, Chaos descriptions

--- a/lists/Chaos/chaos_race.log.html
+++ b/lists/Chaos/chaos_race.log.html
@@ -1,44 +1,24 @@
 <h3>General Chaos Space Marine changes</h3>
 
 <p>
-    A major change to all Space Marine lists, in order to see more characters in the lists, is that the 'They Shall
-    Know No Fear' rule has been amended so that characters with the <i>Leader</i> special rule no longer removes
-    additional blast markers. This allowed us to lower the cost for various Space Marine characters. Captains,
-    Librarians (along with some other nerfs) and Supreme Commanders have been made 25 points cheaper across all relevant
-    lists. At the same time the availability of the 'Commander' upgrade has been limited to formations considered core
-    or elite, rather than support formations, across all Space Marine lists.
+    Factions and Daemons: The balance between the lesser daemons in the Undivided Chaos Space Marine lists have been a bit off, with Flamers and Daemonic Beasts in particular being very powerful choices. There's also been the issue of consistency, where Tzeentch doesn't have access to Horrors. So a decision was made to slightly nerf the daemons by reducing the armour save of Daemonic Beasts to 5+, reducing their engagement range by removing Infiltrators and giving them a move of 30cm instead. Horrors replace Flamers in Undivided lists.
+
+    Greater Daemons are essentially unchanged, but has received an Invulnerable Save (along with all units in the game that can be considered daemonic) and are no longer Expendable. This is primarily oriented towards a future Daemonic Incursion list where pure Daemonic formations are possible, but also has an impact here. The Bloodthirster now also has an FF value.
 </p>
 <p>
-    A new anti-air unit has been introduced in all Space Marine lists: the Stalker. The Stalker is cheaper than the
-    Hunter, but has shorter range on its anti-air gun.
+    Daemon Engines: In order to give these types of units a more defined personality, make their stats easier to remember, and add more variety between factions, all daemon engines now have 2+ Initiative Rating and Invulnerable Save. This has made it possible to make certain formations such as the Defilers slightly cheaper. They are also by definition part of a faction, and as such have a faction special rule which makes them more reliable in ways that fits with their theme.
 </p>
 <p>
-    A Space Marine fighter (the Storm Talon) has been introduced for all Space Marine lists, replacing the Imperial
-    flyers previously available to the Space Marines.
-</p>
-<p>
-    A major source of power in all imperial lists has always been the Warhound titan. In an attempt to bring the power
-    level of the Warhound down to par with it's price we have reduced the speed of the Warhound to 25cm and its
-    firefight value to 5+. In an attempt to see more Warounds used in pairs, rather than singles, we increased the
-    discount by another 25 points when buying Warhound pairs.
+    Cult Marines: The Thousand Sons Marines have been replaced with the more accurate 'Rubric Marines' name, losing their 4+ Reinforced Armour in favor of a normal 3+ Armour and better FF. This change is primarily intended to balance the Thousand Sons list, but obviously also has an impact here.
 </p>
 
 <h5>Additional nerfs, boosts & tweaks</h5>
 <ul>
-    <li>The price of the Thunderhawk has been increased to 225 points.</li>
-    <li>Dreadnoughts (all variants) have better stats, since we felt they were a bit expensive and rarely used.</li>
-    <li>The 'Sniper' upgrade is cheaper.</li>
-    <li>Assault Marines had their FF boosted to 4+ to make them a more attractive formation.</li>
-    <li>Attack Bikes had their firefight boosted to 4+ bringing it in line with the Assault Bikes.</li>
-    <li>The Predator Destructor has received an additional shot on its main gun, bringing it to par with the
-        Annihilator.
-    </li>
-    <li>The seldom seen Land Raiders can now be taken in formations of three, and is also cheaper to take as a transport
-        option.
-    </li>
-    <li>The Battle Barge has had its Slow and Steady rule replaced with 'Slow to Arrive' (can be plotted from turn 2
-        onwards instead of turn 3 onwards) and is also significantly cheaper.
-    </li>
-    <li>Drop Pods has been nerfed to only hit on 6+ with their Deathwind.</li>
-    <li>The option to include a Warlord titan has been removed from all Space Marine lists.</li>
+    <li>Icon Bearer grants Augment Summoning +1 in addition to its other stats.</li>
+    <li>Daemon Prince always has Supreme Commander and Wings, while gaining Daemonic Focus and Invulnerable Save.</li>
+    <li>The Chaos Champion has slightly different stats, removing the difference between factions.</li>
+    <li>Land Raiders are cheaper to take as a formation transport upgrade, in line with Transport upgrades throughout the game.</li>
+    <li>Hell Blades have a 6+ AA instead of 5+, but are 25 points cheaper.</li>
+    <li>The Despoiler Class Battleship has had its Slow and Steady rule replaced with 'Slow to Arrive' (can be plotted from turn 2
+        onwards instead of turn 3 onwards) and is also significantly cheaper.</li>
 </ul>
