--- a/lists/Chaos/emperorschildren.log.html
+++ b/lists/Chaos/emperorschildren.log.html
@@ -1,21 +1,21 @@
 <h4>Version 1.0.beta</h4>
 <p>
-    The EA:Ragnarök Emperor's Children list is based on the NetEA version, with some elements borrowed from the E-UK version as well. It inherits the changes made to the Black Legion list, while adding a few novel elements.
+    The EA:Ragnarök Emperor's Children list is based on the NetEA version, with some elements borrowed from the E-UK version as well.
 </p>
 <p>
-    Compulsory Cult Marines: In the NetEA version of the Emperor's Children, it was perfectly possible to play without any Noise Marines whatsoever, while the E-UK version enforces a great deal of Noise Marines, making the list quite expensive. The EA:Ragnarök versions of the CSM Cult armies tries to land in between these extremes with the core retinues being roughtly split between Fearless and Non-Fearless units.
+    Compulsory Cult Marines: In the NetEA version of the Emperor's Children, it was perfectly possible to play without any Noise Marines whatsoever, while the E-UK version enforces a great deal of Noise Marines, making the list quite expensive. The EA:Ragnarök versions of the CSM Cult armies tries to land in between these extremes with the core retinues being roughtly split between Fearless and non-Fearless units.
 </p>
 <p>
-    Cult Specific Terminators: All Cult Terminators now have faction specific stats and weaponry, and are also Fearless. This of course comes with a significant increase in cost.
+    Faction Specific Terminators: Most CSM armies now have Terminators with special specific stats and weaponry, while those of The 'Cult' armies are also Fearless. This of course comes with a significant increase in cost.
 </p>
 <p>
-    Daemons: Emperor's Children and all other Faction specific CSM lists now has a free Greater Daemon point, as well as having a compulsory Daemonic Pact upgrade. This both gives them more personality and tighter relationship with their Patron Power, but also creates some interesting tensions in army-building regarding the Chaos Champion. This also compensates the Cult lists for the lost flexibility in daemons that Black Legion now has. What the Cult CSM lists do have is access to better Daemonic Beasts, as well as high-end lesser daemons which costs 2 summoning points to put on the battlefield, which opens up the potential for extremely powerful formations if summoning over a few turns.
+    Daemons: All 'Cult' CSM armies now has a free Greater Daemon point, as well as having a compulsory Daemonic Pact upgrade. This both gives them more personality and tighter relationship with their respective patron god, but also creates some interesting tensions in army building (the Greater Daemon might be free, but the Chaos Champion certainly isn't...). This also compensates the Cult lists for the lost flexibility in daemons that Black Legion now has. What the Cult CSM lists do have is access to better version of the Daemonic Beast, as well as high-end lesser daemons which costs 2 summoning points to put on the battlefield, which opens up the potential for extremely powerful formations if summoning over a few turns.
 </p>
 <p>
-    Thunderhawk: The Chaos Thunderhawk is gone, as it wasn't totally clear why Emperor's Children of all Cult lists deserved to have access to such a powerful asset, in particular since it has many other powerful unit types to choose from. This has instead been reserved for future CSM lists such as the Night Lords.
+    Thunderhawk: The Chaos Thunderhawk is gone, partly because it has many other unique unit types to choose from, and partly as it was a better fit for a future CSM list, the Night Lords. As a slight compensation the Despoiler Class Battleship has been added to the list.
 </p>
 <p>
-    Daemonic Knights: These formations are no longer 0-1, but are on the other hand fixed in formation size which makes it impossible to create the death star, BTS formations of Daemonic Knights that were both possible and very useful in the NetEA version. The stats of the Hell-Knight has been boosted to bring it to par with the Hell-Scourges. These are also no longer War Engines, but are intead of the new unit type H-AV, which are intended to represent all 'Knight-class' units (see the 'Rules' section of the website for more details). The Hell-Strider has slightly different stats.
+    Daemonic Knights: These formations are no longer 0-1, but are on the other hand fixed in formation size which makes it impossible to create the "death star", BTS formations of Daemonic Knights that felt a bit too obvious in the NetEA version. The stats of the Hell-Knight has been boosted to bring it to par with the Hell-Scourges. These are also no longer War Engines, but are intead of the new unit type H-AV, making them significantly easier to engage. The Hell-Strider has slightly different stats.
 </p>
 
 <h5>Additional nerfs, boosts & tweaks</h5>
