--- a/lists/Chaos/deathguard.log.html
+++ b/lists/Chaos/deathguard.log.html
@@ -1,12 +1,18 @@
 <h4>Version 1.0.beta</h4>
 <p>
-    The EA:Ragnarök Death Guard has taken some inspiration from the E-UK version of the list, as well as the Emperor's Children Net-EA list. Instead of the Invulnerable Save and lack of access to the 'March' action, the list trades increased save for worse speed on some of its units, making the list slower overall. Most changes and concepts have been inherited from the Black Legion and the Emperor's Children lists, in particular the mixed formations of Plague Marines and Chaos Space Marines.
+    The EA:Ragnarök Death Guard has taken some inspiration from the E-UK version of the list, as well as the Emperor's Children Net-EA list. Instead of the Invulnerable Save and lack of access to the 'March' action, the list trades improved armour for slower speed on some of its units.
+</p>
+<p>
+    Faction Specific Terminators: Most CSM armies now have Terminators with special specific stats and weaponry, while those of The 'Cult' armies are also Fearless. This of course comes with a significant increase in cost.
+</p>
+<p>
+    Daemons: All 'Cult' CSM armies now has a free Greater Daemon point, as well as having a compulsory Daemonic Pact upgrade. This both gives them more personality and tighter relationship with their respective patron god, but also creates some interesting tensions in army building (the Greater Daemon might be free, but the Chaos Champion certainly isn't...). This also compensates the Cult lists for the lost flexibility in daemons that Black Legion now has. What the Cult CSM lists do have is access to better version of the Daemonic Beast, as well as high-end lesser daemons which costs 2 summoning points to put on the battlefield, which opens up the potential for extremely powerful formations if summoning over a few turns.
 </p>
 <h5>Additional nerfs, boosts & tweaks</h5>
 <ul>
-    <li>Daemonic Beasts removed, replaced with Beasts of Nurgle and Plague Drones.</li>
     <li>Death Guard Terminators formation slightly cheaper due to the list's lack of Dreadclaws.</li>
+    <li>Death Guards trades the normal CSM fliers and space ships for Heldrakes, Harbringer Bombers and the Plagueship.</li>
     <li>Plague Zombies are fixed size, but slightly worse stats.</li>
     <li>Plague Tower oriented more towards being a transport option, with higher speed and worse save.</li>
-    <li>Nurgle Titans trades Void Shields for more DC, retains the same speed as others of their type.</li>
+    <li>Nurgle Titans trades Void Shields for more DC, retains the same speed as others of their type. The Warlord equivalent has been removed, and is instead reserved for the Traitor Titan Legion list. The Plaguehound slightly increased in cost.</li>
 </ul>
