--- a/lists/Chaos/thousandsons.log.html
+++ b/lists/Chaos/thousandsons.log.html
@@ -1,22 +1,23 @@
 <h4>Version 1.0.beta</h4>
 <p>
-    The EA:Ragnarök Thousand Sons list is based on the E-UK version.
+    The EA:Ragnarök Thousand Sons list is based on the E-UK version, mixed with some inspiration from the NetEA Emperor's Children list.
 </p>
 <p>
-    Mixed Retinues: While Rubric Marines (with 3+ Armour) now easier to get rid of, making formations mixed between non-fearless and fearless units makes the retinues more flexible but also more brittle. Thousand Sons retinues are extremely expensive, but has access to what are probably the best selection of daemons and are very hard to shift. The Thousand Sons Marines are now ordinary Chaos Space Marines but with Tzeentchian weaponry.
+    Mixed Retinues: While Rubric Marines (with 3+ Armour) now easier to get rid of, making formations mixed between non-fearless and fearless units makes the retinues more flexible but also more brittle. Thousand Sons retinues are extremely expensive, but has access to what are probably the best selection of daemons and are very hard to shift. The Thousand Sons Marines and Thousand Sons Havocs are now ordinary Chaos Space Marines but with Tzeentchian weaponry.
 </p>
 <p>
-    Terminators and Teleport Homer: While Thousand Sons do not have access to Dreadclaws, they do have the 'Teleport Homer' special rule, making up for their Terminators lack of competence in CC.
+    Scarab Occult Terminators and Teleport Homer: Like other 'Cult' CSM lists, the Tzeentch-flavoured variety is also fearless, and trades their shooting and CC stats for very competent FF stats. While Thousand Sons do not have access to Dreadclaws, they do have the 'Teleport Homer' special rule, making up for their Terminators lack of competence in CC.
 </p>
 <p>
-    Daemons: The Daemons are basically the same as in the E-UK list, but with the addition of the Horrors inherited from the Black Legion list.
+    Daemons: All 'Cult' CSM armies now has a free Greater Daemon point, as well as having a compulsory Daemonic Pact upgrade. This both gives them more personality and tighter relationship with their respective patron god, but also creates some interesting tensions in army building (the Greater Daemon might be free, but the Chaos Champion certainly isn't...). This also compensates the Cult lists for the lost flexibility in daemons that Black Legion now has. What the Cult CSM lists do have is access to better version of the Daemonic Beast, as well as high-end lesser daemons which costs 2 summoning points to put on the battlefield, which opens up the potential for extremely powerful formations if summoning over a few turns.
 </p>
 <p>
-    Daemonic Knights: These formations are no longer 0-1, but are on the other hand fixed in formation size which makes it impossible to create the death star, BTS formations of Daemonic Knights that were both possible and very useful in the NetEA version. The stats of the Hell-Knight has been boosted to bring it to par with the Hell-Scourges. These are also no longer War Engines, but are intead of the new unit type H-AV, which are intended to represent all 'Knight-class' units (see the 'Rules' section of the website for more details). The Hell-Strider has slightly different stats.
+    Tzaangors and CO: Tzaangors accompanied with Chaos Spawn or Mutalith Vortex Beasts are an important addition to the list, compensating for the expensive core formations.
 </p>
 
 <h5>Additional nerfs, boosts & tweaks</h5>
 <ul>
-    <li>The Debaser, a faction specific Defiler, is introduced, based on the E-UK stats.</li>
-    <li>The Questor and Subjugators have slightly different weaponry, bringing them more in line with the fluff, and have had their speed reduced by 5cm in line with other Warhound type units. The Subjugators are now in parity with the Questors in both capability and cost.</li>
+    <li>The Tzeentchian variety of Defiler (the Deciever) now comes in smaller formations, being more of a dedicated support unit, and with less competent shooting.</li>
+    <li>Doomwings have been made slightly more expensive, as it was a very attractive choice before.</li>
+    <li>A version of the Warp Palace (essentially a huge Silver Tower) has been introduced, replacing the Tzeentch variety of Reavers and Warlords, which are reserved for the Traitor Titan Legion list. It lacks shields, but has the global special rule 'Regeneration', which effectively gives it a 5+ Invulnerable Save.</li>
 </ul>
